--- a/package.json
+++ b/package.json
@@ -17,13 +17,21 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:create": "typeorm-ts-node-commonjs migration:create migrations/init",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate migrations/init -d src/configs/typeorm.config.ts",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/configs/typeorm.config.ts",
+    "migration:run-prod": "typeorm-ts-node-commonjs migration:run -d dist/src/configs/typeorm.config.js",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/configs/typeorm.config.ts",
+    "migration:revert-prod": "typeorm-ts-node-commonjs migration:revert -d dist/src/configs/typeorm.config.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "pg": "^8.13.1",
