fix: fixing migration issue in development and production

--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "set NODE_ENV=development && nest start",
+    "start:dev": "set NODE_ENV=development && nest start --watch",
+    "start:debug": "set NODE_ENV=development && nest start --debug --watch",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "set NODE_ENV=development && jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:create": "typeorm-ts-node-commonjs migration:create migrations/init",
-    "migration:generate": "typeorm-ts-node-commonjs migration:generate migrations/init -d src/configs/typeorm.config.ts",
-    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/configs/typeorm.config.ts",
-    "migration:run-prod": "typeorm-ts-node-commonjs migration:run -d dist/src/configs/typeorm.config.js",
-    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/configs/typeorm.config.ts",
-    "migration:revert-prod": "typeorm-ts-node-commonjs migration:revert -d dist/src/configs/typeorm.config.js"
+    "migrate:create": "typeorm-ts-node-commonjs migration:create migrations/empty-migration",
+    "migrate:generate": "typeorm-ts-node-commonjs migration:generate migrations/migration -d src/configs/typeorm.config.ts",
+    "migrate:run": "typeorm-ts-node-commonjs migration:run -d src/configs/typeorm.config.ts",
+    "migrate:run-prod": "set NODE_ENV=production && typeorm migration:run -d dist/src/configs/typeorm.config.js",
+    "migrate:revert": "typeorm-ts-node-commonjs migration:revert -d src/configs/typeorm.config.ts",
+    "migrate:revert-prod": "set NODE_ENV=production && typeorm migration:revert -d dist/src/configs/typeorm.config.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
