--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^11.0.6",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.6",
+    "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.7",
