--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "set NODE_ENV=development && nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "set NODE_ENV=development && jest",
+    "test": "set NODE_ENV=test && jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
