--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "set NODE_ENV=development && nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "set NODE_ENV=test && jest",
+    "test": "set NODE_ENV=test && jest --runInBand --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -23,9 +23,12 @@
     "migrate:run": "typeorm-ts-node-commonjs migration:run -d src/configs/typeorm.config.ts",
     "migrate:run-prod": "set NODE_ENV=production && typeorm migration:run -d dist/src/configs/typeorm.config.js",
     "migrate:revert": "typeorm-ts-node-commonjs migration:revert -d src/configs/typeorm.config.ts",
-    "migrate:revert-prod": "set NODE_ENV=production && typeorm migration:revert -d dist/src/configs/typeorm.config.js"
+    "migrate:revert-prod": "set NODE_ENV=production && typeorm migration:revert -d dist/src/configs/typeorm.config.js",
+    "migrate:run-test": "set NODE_ENV=test && typeorm migration:run -d dist/src/configs/typeorm.config.js",
+    "migrate:revert-test": "set NODE_ENV=production && typeorm migration:revert -d dist/src/configs/typeorm.config.js"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.6",
     "@nestjs/core": "^11.0.6",
     "@nestjs/jwt": "^11.0.0",
@@ -34,6 +37,7 @@
     "@nestjs/platform-express": "^11.0.6",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
@@ -43,7 +47,8 @@
     "rxjs": "^7.8.1",
     "ts-pattern": "^5.6.2",
     "typeorm": "^0.3.20",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.2",
