change migration strategy

--- a/package.json
+++ b/package.json
@@ -6,26 +6,26 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "pre:dev": "cp env/.env.development .env",
+    "pre:prod": "cp env/.env.production .env",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "set NODE_ENV=development && nest start",
-    "start:dev": "set NODE_ENV=development && nest start --watch",
-    "start:debug": "set NODE_ENV=development && nest start --debug --watch",
-    "start:prod": "node dist/src/main",
+    "dev:watch": "npm run pre:dev && nest start --watch",
+    "build:dev": "npm run pre:dev && nest build",
+    "start:dev": "npm run pre:dev && node dist/main",
+    "build:prod": "npm run pre:prod && nest build",
+    "start:prod": "npm run pre:prod && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "set NODE_ENV=test && jest --runInBand --detectOpenHandles",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:create": "typeorm-ts-node-commonjs migration:create migrations/empty-migration",
-    "migrate:generate": "typeorm-ts-node-commonjs migration:generate migrations/migration -d src/configs/typeorm.config.ts",
-    "migrate:run": "typeorm-ts-node-commonjs migration:run -d src/configs/typeorm.config.ts",
-    "migrate:run-prod": "set NODE_ENV=production && typeorm migration:run -d dist/src/configs/typeorm.config.js",
-    "migrate:revert": "typeorm-ts-node-commonjs migration:revert -d src/configs/typeorm.config.ts",
-    "migrate:revert-prod": "set NODE_ENV=production && typeorm migration:revert -d dist/src/configs/typeorm.config.js",
-    "migrate:run-test": "set NODE_ENV=test && typeorm migration:run -d dist/src/configs/typeorm.config.js",
-    "migrate:revert-test": "set NODE_ENV=production && typeorm migration:revert -d dist/src/configs/typeorm.config.js"
+    "test": "npm run pre:dev && jest --runInBand --detectOpenHandles",
+    "test:watch": "npm run pre:dev && jest --watch",
+    "test:e2e": "npm run pre:dev && jest --config ./test/jest-e2e.json",
+    "migrate:dev:crete": "npm run pre:dev && typeorm-ts-node-commonjs migration:create migrations/dev/empty-migration",
+    "migrate:dev:generate": "npm run pre:dev && typeorm-ts-node-commonjs migration:generate migrations/dev/migration -d src/configs/typeorm.config.ts",
+    "migrate:dev:run": "npm run pre:dev && typeorm-ts-node-commonjs migration:run -d src/configs/typeorm.config.ts",
+    "migrate:dev:revert": "npm run pre:dev && typeorm-ts-node-commonjs migration:revert -d src/configs/typeorm.config.ts",
+    "migrate:prod:crete": "npm run pre:prod && typeorm-ts-node-commonjs migration:create migrations/prod/empty-migration",
+    "migrate:prod:generate": "npm run pre:prod && typeorm-ts-node-commonjs migration:generate migrations/prod/migration -d src/configs/typeorm.config.ts",
+    "migrate:prod:run": "npm run pre:prod && typeorm-ts-node-commonjs migration:run -d src/configs/typeorm.config.ts",
+    "migrate:prod:revert": "npm run pre:prod && typeorm-ts-node-commonjs migration:revert -d src/configs/typeorm.config.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
