--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pre:dev": "cp env/.env.development .env",
     "pre:prod": "cp env/.env.production .env",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "dev:watch": "npm run pre:dev && nest start --watch",
+    "dev:local": "npm run pre:dev && nest start --watch",
     "build:dev": "npm run pre:dev && nest build",
     "start:dev": "npm run pre:dev && node dist/main",
     "build:prod": "npm run pre:prod && nest build",
@@ -19,13 +19,15 @@
     "test:watch": "npm run pre:dev && jest --watch",
     "test:e2e": "npm run pre:dev && jest --config ./test/jest-e2e.json",
     "migrate:dev:crete": "npm run pre:dev && typeorm-ts-node-commonjs migration:create migrations/dev/empty-migration",
-    "migrate:dev:generate": "npm run pre:dev && typeorm-ts-node-commonjs migration:generate migrations/dev/migration -d src/configs/typeorm.config.ts",
-    "migrate:dev:run": "npm run pre:dev && typeorm-ts-node-commonjs migration:run -d src/configs/typeorm.config.ts",
-    "migrate:dev:revert": "npm run pre:dev && typeorm-ts-node-commonjs migration:revert -d src/configs/typeorm.config.ts",
+    "migrate:dev:generate": "npm run pre:dev && typeorm-ts-node-commonjs migration:generate migrations/dev/migration -d src/configs/migration.config.ts",
+    "migrate:dev:run": "npm run pre:dev && typeorm-ts-node-commonjs migration:run -d src/configs/migration.config.ts",
+    "migrate:dev:revert": "npm run pre:dev && typeorm-ts-node-commonjs migration:revert -d src/configs/migration.config.ts",
     "migrate:prod:crete": "npm run pre:prod && typeorm-ts-node-commonjs migration:create migrations/prod/empty-migration",
-    "migrate:prod:generate": "npm run pre:prod && typeorm-ts-node-commonjs migration:generate migrations/prod/migration -d src/configs/typeorm.config.ts",
-    "migrate:prod:run": "npm run pre:prod && typeorm-ts-node-commonjs migration:run -d src/configs/typeorm.config.ts",
-    "migrate:prod:revert": "npm run pre:prod && typeorm-ts-node-commonjs migration:revert -d src/configs/typeorm.config.ts"
+    "migrate:prod:generate": "npm run pre:prod && typeorm-ts-node-commonjs migration:generate migrations/prod/migration -d src/configs/migration.config.ts",
+    "migrate:prod:run": "npm run pre:prod && typeorm-ts-node-commonjs migration:run -d src/configs/migration.config.ts",
+    "migrate:prod:revert": "npm run pre:prod && typeorm-ts-node-commonjs migration:revert -d src/configs/migration.config.ts",
+    "format:write": "prettier --write \"**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"**/*.{ts, tsx}\" --cache"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
@@ -52,6 +54,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@nestjs/cli": "^11.0.2",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.6",
