chore: update formatting config and dependencies
- Updated .prettierrc for new formatting rules
- Synced package.json and package-lock.json dependencies
- Adjusted test/app.e2e-spec.ts to align with updated config or tooling

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "printWidth": 110,
   "semi": true,
   "plugins": ["@ianvs/prettier-plugin-sort-imports"],
+  "importOrderParserPlugins": ["typescript", "decorators-legacy", "classProperties"],
   "importOrder": [
     "^node:",
     "^fs$",
@@ -14,13 +15,10 @@
     "^zod$",
     "^ts-pattern$",
     "<THIRD_PARTY_MODULES>",
-    "^src/controller$",
-    "^src/service$",
-    "^src/repository$",
-    "^src/dto$",
-    "^src/entity$",
-    "^src/(?!controller|service|repository|dto|entity|util).*",
-    "^src/util$",
+    "^src/shared/services$",
+    "^src/shared$",
+    "^src/types$",
+    "^src/utils$",
     "^src/config$",
     "^[.]"
   ],
