--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "pre:dev": "cp env/.env.development .env",
     "pre:prod": "cp env/.env.production .env",
+    "pre:test": "cp env/.env.development .env",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "dev:local": "npm run pre:dev && nest start --watch",
     "build:dev": "npm run pre:dev && nest build",
@@ -15,9 +16,9 @@
     "build:prod": "npm run pre:prod && nest build",
     "start:prod": "npm run pre:prod && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "npm run pre:dev && jest --runInBand --detectOpenHandles",
-    "test:watch": "npm run pre:dev && jest --watch",
-    "test:e2e": "npm run pre:dev && jest --config ./test/jest-e2e.json",
+    "test": "npm run pre:test && jest --runInBand --detectOpenHandles --verbose",
+    "test:watch": "npm run pre:test && jest --watch",
+    "test:e2e": "npm run pre:test && jest --config ./test/jest-e2e.json",
     "migrate:dev:crete": "npm run pre:dev && typeorm-ts-node-commonjs migration:create migrations/dev/empty-migration",
     "migrate:dev:generate": "npm run pre:dev && typeorm-ts-node-commonjs migration:generate migrations/dev/migration -d src/configs/migration.config.ts",
     "migrate:dev:run": "npm run pre:dev && typeorm-ts-node-commonjs migration:run -d src/configs/migration.config.ts",
@@ -41,9 +42,12 @@
     "@nestjs/typeorm": "^11.0.0",
     "@standard-schema/spec": "^1.0.0",
     "axios": "^1.7.9",
+    "bytes": "^3.1.2",
     "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "ms": "^2.1.3",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
@@ -51,16 +55,20 @@
     "ts-pattern": "^5.6.2",
     "typeorm": "^0.3.20",
     "winston": "^3.17.0",
-    "zod": "^3.24.1"
+    "winston-console-format": "^1.0.8",
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@nestjs/cli": "^11.0.2",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.6",
+    "@types/bytes": "^3.1.5",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/ms": "^2.1.0",
     "@types/node": "^22.12.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
