chore(types): refactor type declarations using
Refactored and modularized custom type declarations:
- Created new declaration files: , , ,
- Removed deprecated
- Updated various modules to use extended types via

No runtime logic was changed — only type improvements for clarity and maintainabili.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,7 @@
       "src/*": ["./src/*"],
       "application": ["./package.json"]
     }
-  }
+  },
+  "include": ["src/**/*.ts", "src/types/*.d.ts"],
+  "exclude": ["node_modules"]
 }
