style: apply consistent import order across modules

--- a/.prettierrc
+++ b/.prettierrc
@@ -11,15 +11,18 @@
     "^path$",
     "<BUILTIN_MODULES>",
     "^express$",
-    "^@nestjs/(.*)$",
-    "^zod$",
-    "^ts-pattern$",
+    "^zod($|/)",
+    "^ts-pattern($|/)",
+    "^typeorm($|/)",
     "<THIRD_PARTY_MODULES>",
-    "^src/shared/services$",
-    "^src/shared$",
-    "^src/types$",
-    "^src/utils$",
-    "^src/config$",
+    "^@nestjs/(.*)$",
+    "^src/modules(/.*)?$",
+    "^src/shared/modules(/.*)?$",
+    "^src/shared/decorators(/.*)?$",
+    "^src/shared(/.*)?$",
+    "^src/types(/.*)?$",
+    "^src/config(/.*)?$",
+    "^src/utils(/.*)?$",
     "^[.]"
   ],
   "importOrderSeparation": true,
