--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "format:check": "prettier --check \"**/*.{ts, tsx}\" --cache"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.6",
     "@nestjs/core": "^11.0.6",
@@ -41,6 +42,7 @@
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
     "@standard-schema/spec": "^1.0.0",
+    "argon2": "^0.43.0",
     "axios": "^1.7.9",
     "bytes": "^3.1.2",
     "class-transformer": "^0.5.1",
@@ -48,7 +50,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "fast-safe-stringify": "^2.1.1",
+    "handlebars": "^4.7.8",
     "ms": "^2.1.3",
+    "nodemailer": "^7.0.3",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
@@ -71,6 +75,7 @@
     "@types/jest": "^29.5.14",
     "@types/ms": "^2.1.0",
     "@types/node": "^22.12.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
@@ -87,6 +92,11 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
+  },
+  "overrides": {
+    "@nestjs-modules/mailer": {
+      "mjml": "^5.0.0-alpha.4"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
