chore(config): update Prettier and VSCode settings

--- a/.prettierrc
+++ b/.prettierrc
@@ -26,5 +26,13 @@
     "^[.]"
   ],
   "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSortSpecifiers": true,
+  "overrides": [
+    {
+      "files": "*.hbs",
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
 }
