chore(migration): configure migration strategy and align entity definitions

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "pre:dev": "cp env/.env.development .env",
     "pre:prod": "cp env/.env.production .env",
     "pre:test": "cp env/.env.development .env",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "dev:local": "npm run pre:dev && nest start --watch",
     "build:dev": "npm run pre:dev && nest build",
     "start:dev": "npm run pre:dev && node dist/main",
@@ -19,14 +18,14 @@
     "test": "npm run pre:test && jest --runInBand --detectOpenHandles --verbose",
     "test:watch": "npm run pre:test && jest --watch",
     "test:e2e": "npm run pre:test && jest --config ./test/jest-e2e.json",
-    "migrate:dev:crete": "npm run pre:dev && typeorm-ts-node-commonjs migration:create migrations/dev/empty-migration",
-    "migrate:dev:generate": "npm run pre:dev && typeorm-ts-node-commonjs migration:generate migrations/dev/migration -d src/configs/migration.config.ts",
-    "migrate:dev:run": "npm run pre:dev && typeorm-ts-node-commonjs migration:run -d src/configs/migration.config.ts",
-    "migrate:dev:revert": "npm run pre:dev && typeorm-ts-node-commonjs migration:revert -d src/configs/migration.config.ts",
-    "migrate:prod:crete": "npm run pre:prod && typeorm-ts-node-commonjs migration:create migrations/prod/empty-migration",
-    "migrate:prod:generate": "npm run pre:prod && typeorm-ts-node-commonjs migration:generate migrations/prod/migration -d src/configs/migration.config.ts",
-    "migrate:prod:run": "npm run pre:prod && typeorm-ts-node-commonjs migration:run -d src/configs/migration.config.ts",
-    "migrate:prod:revert": "npm run pre:prod && typeorm-ts-node-commonjs migration:revert -d src/configs/migration.config.ts",
+    "migrate:init": "npm run pre:dev && typeorm-ts-node-commonjs migration:generate migrations/init -d src/config/migration.config.ts",
+    "migrate:create": "npm run pre:dev && typeorm-ts-node-commonjs migration:create migrations/%npm_config_name%",
+    "migrate:dev:run": "npm run pre:dev && typeorm-ts-node-commonjs migration:run -d src/config/migration.config.ts",
+    "migrate:dev:revert": "npm run pre:dev && typeorm-ts-node-commonjs migration:revert -d src/config/migration.config.ts",
+    "migrate:dev:status": "npm run pre:dev && typeorm-ts-node-commonjs migration:show -d src/config/migration.config.ts",
+    "migrate:prod:run": "npm run pre:prod && typeorm-ts-node-commonjs migration:run -d src/config/migration.config.ts",
+    "migrate:prod:revert": "npm run pre:prod && typeorm-ts-node-commonjs migration:revert -d src/config/migration.config.ts",
+    "migrate:prod:status": "npm run pre:prod && typeorm-ts-node-commonjs migration:show -d src/config/migration.config.ts",
     "format:write": "prettier --write \"**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"**/*.{ts, tsx}\" --cache"
   },
@@ -40,6 +39,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.6",
     "@nestjs/swagger": "^11.0.3",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@standard-schema/spec": "^1.0.0",
     "argon2": "^0.43.0",
