chore: update Prettier config and adjust app module accordingly
Modified .prettierrc for formatting preferences and updated app.module.ts to align with config or module structure changes.

--- a/.prettierrc
+++ b/.prettierrc
@@ -21,7 +21,9 @@
     "^src/shared/decorators(/.*)?$",
     "^src/shared(/.*)?$",
     "^src/types(/.*)?$",
+    "^src/utils/[^/]+",
     "^src/utils(/.*)?$",
+    "^src/utils$",
     "^src/config(/.*)?$",
     "^[.]"
   ],
