--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "handlebars": "^4.7.8",
     "ms": "^2.1.3",
     "nodemailer": "^7.0.3",
+    "otp": "^1.1.2",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
