chore(config): support for .env.local environment file

--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "pre:local": "cp env/.env.local .env",
     "pre:dev": "cp env/.env.development .env",
     "pre:prod": "cp env/.env.production .env",
     "pre:test": "cp env/.env.development .env",
-    "dev:local": "npm run pre:dev && nest start --watch",
+    "dev:local": "npm run pre:local && nest start --watch",
+    "build:local": "npm run pre:local && nest build",
+    "start:local": "npm run pre:local && node dist/main",
+    "dev:dev": "npm run pre:dev && nest start --watch",
     "build:dev": "npm run pre:dev && nest build",
     "start:dev": "npm run pre:dev && node dist/main",
     "build:prod": "npm run pre:prod && nest build",
     "start:prod": "npm run pre:prod && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "npm run pre:test && jest --runInBand --detectOpenHandles --verbose",
-    "test:watch": "npm run pre:test && jest --watch",
-    "test:e2e": "npm run pre:test && jest --config ./test/jest-e2e.json",
+    "test": "npm run pre:local && jest --runInBand --detectOpenHandles --verbose --coverage",
+    "test:watch": "npm run pre:local && jest --watch",
+    "test:e2e": "npm run pre:local && jest --config ./test/jest-e2e.json",
     "migrate:init": "npm run pre:dev && typeorm-ts-node-commonjs migration:generate migrations/init -d src/config/migration.config.ts",
     "migrate:create": "npm run pre:dev && typeorm-ts-node-commonjs migration:create migrations/%npm_config_name%",
+    "migrate:local:run": "npm run pre:local && typeorm-ts-node-commonjs migration:run -d src/config/migration.config.ts",
+    "migrate:local:revert": "npm run pre:local && typeorm-ts-node-commonjs migration:revert -d src/config/migration.config.ts",
+    "migrate:local:status": "npm run pre:local && typeorm-ts-node-commonjs migration:show -d src/config/migration.config.ts",
     "migrate:dev:run": "npm run pre:dev && typeorm-ts-node-commonjs migration:run -d src/config/migration.config.ts",
     "migrate:dev:revert": "npm run pre:dev && typeorm-ts-node-commonjs migration:revert -d src/config/migration.config.ts",
     "migrate:dev:status": "npm run pre:dev && typeorm-ts-node-commonjs migration:show -d src/config/migration.config.ts",
