--- a/package.json
+++ b/package.json
@@ -22,17 +22,20 @@
     "test": "npm run pre:local && jest --runInBand --detectOpenHandles --verbose --coverage",
     "test:watch": "npm run pre:local && jest --watch",
     "test:e2e": "npm run pre:local && jest --config ./test/jest-e2e.json",
-    "migrate:init": "npm run pre:dev && typeorm-ts-node-commonjs migration:generate migrations/init -d src/config/migration.config.ts",
-    "migrate:create": "npm run pre:dev && typeorm-ts-node-commonjs migration:create migrations/%npm_config_name%",
-    "migrate:local:run": "npm run pre:local && typeorm-ts-node-commonjs migration:run -d src/config/migration.config.ts",
-    "migrate:local:revert": "npm run pre:local && typeorm-ts-node-commonjs migration:revert -d src/config/migration.config.ts",
-    "migrate:local:status": "npm run pre:local && typeorm-ts-node-commonjs migration:show -d src/config/migration.config.ts",
-    "migrate:dev:run": "npm run pre:dev && typeorm-ts-node-commonjs migration:run -d src/config/migration.config.ts",
-    "migrate:dev:revert": "npm run pre:dev && typeorm-ts-node-commonjs migration:revert -d src/config/migration.config.ts",
-    "migrate:dev:status": "npm run pre:dev && typeorm-ts-node-commonjs migration:show -d src/config/migration.config.ts",
-    "migrate:prod:run": "npm run pre:prod && typeorm-ts-node-commonjs migration:run -d src/config/migration.config.ts",
-    "migrate:prod:revert": "npm run pre:prod && typeorm-ts-node-commonjs migration:revert -d src/config/migration.config.ts",
-    "migrate:prod:status": "npm run pre:prod && typeorm-ts-node-commonjs migration:show -d src/config/migration.config.ts",
+    "migrate:generate": "npm run pre:local && typeorm migration:generate migrations/init -d src/config/migration.config.ts",
+    "migrate:create": "npm run pre:local && typeorm migration:create migrations/%npm_config_name%",
+    "query:local": "npm run pre:local && typeorm query -d src/config/migration.config.ts",
+    "migrate:local:run": "npm run pre:local && typeorm migration:run -d src/config/migration.config.ts",
+    "migrate:local:revert": "npm run pre:local && typeorm migration:revert -d src/config/migration.config.ts",
+    "migrate:local:show": "npm run pre:local && typeorm migration:show -d src/config/migration.config.ts",
+    "query:dev": "npm run pre:dev && typeorm query -d src/config/migration.config.ts",
+    "migrate:dev:run": "npm run pre:dev && typeorm migration:run -d src/config/migration.config.ts",
+    "migrate:dev:revert": "npm run pre:dev && typeorm migration:revert -d src/config/migration.config.ts",
+    "migrate:dev:show": "npm run pre:dev && typeorm migration:show -d src/config/migration.config.ts",
+    "query:prod": "npm run pre:prod && typeorm query -d src/config/migration.config.ts",
+    "migrate:prod:run": "npm run pre:prod && typeorm migration:run -d src/config/migration.config.ts",
+    "migrate:prod:revert": "npm run pre:prod && typeorm migration:revert -d src/config/migration.config.ts",
+    "migrate:prod:show": "npm run pre:prod && typeorm migration:show -d src/config/migration.config.ts",
     "format:write": "prettier --write \"**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"**/*.{ts, tsx}\" --cache"
   },
@@ -60,7 +63,7 @@
     "handlebars": "^4.7.8",
     "ms": "^2.1.3",
     "nodemailer": "^7.0.3",
-    "otp": "^1.1.2",
+    "otplib": "^12.0.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
