--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       "application": ["./package.json"]
     }
   },
-  "include": ["src/**/*.ts", "src/types"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
