chore(format): update Prettier configuration

--- a/.prettierrc
+++ b/.prettierrc
@@ -16,15 +16,17 @@
     "^typeorm($|/)",
     "<THIRD_PARTY_MODULES>",
     "^@nestjs/(.*)$",
-    "^src/modules(/.*)?$",
+    "^src/shared/base(/.*)?$",
     "^src/shared/modules(/.*)?$",
     "^src/shared/decorators(/.*)?$",
     "^src/shared(/.*)?$",
+    "^src/modules(/.*)?$",
     "^src/types(/.*)?$",
     "^src/utils/[^/]+",
     "^src/utils(/.*)?$",
     "^src/utils$",
     "^src/config(/.*)?$",
+    "^test(/.*)?$",
     "^[.]/services(/.*)?$",
     "^[.]/repositories(/.*)?$",
     "^[.]/entities(/.*)?$",
