test: exlude entity from coverage counting

--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
       "**/*.(t|j)s",
       "!**/*.config.ts",
       "!**/*.module.ts",
+      "!**/*.entity.ts",
       "!**/main.ts"
     ],
     "coverageDirectory": "../coverage",
