chore: set example environment, setup script to run typeorm

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "pre:local": "cp env/.env.local .env",
     "pre:dev": "cp env/.env.development .env",
     "pre:prod": "cp env/.env.production .env",
@@ -22,20 +23,20 @@
     "test": "npm run pre:local && jest --runInBand --detectOpenHandles --verbose --coverage",
     "test:watch": "npm run pre:local && jest --watch",
     "test:e2e": "npm run pre:local && jest --config ./test/jest-e2e.json",
-    "migrate:generate": "npm run pre:local && typeorm migration:generate migrations/init -d src/config/migration.config.ts",
-    "migrate:create": "npm run pre:local && typeorm migration:create migrations/%npm_config_name%",
-    "query:local": "npm run pre:local && typeorm query -d src/config/migration.config.ts",
-    "migrate:local:run": "npm run pre:local && typeorm migration:run -d src/config/migration.config.ts",
-    "migrate:local:revert": "npm run pre:local && typeorm migration:revert -d src/config/migration.config.ts",
-    "migrate:local:show": "npm run pre:local && typeorm migration:show -d src/config/migration.config.ts",
-    "query:dev": "npm run pre:dev && typeorm query -d src/config/migration.config.ts",
-    "migrate:dev:run": "npm run pre:dev && typeorm migration:run -d src/config/migration.config.ts",
-    "migrate:dev:revert": "npm run pre:dev && typeorm migration:revert -d src/config/migration.config.ts",
-    "migrate:dev:show": "npm run pre:dev && typeorm migration:show -d src/config/migration.config.ts",
-    "query:prod": "npm run pre:prod && typeorm query -d src/config/migration.config.ts",
-    "migrate:prod:run": "npm run pre:prod && typeorm migration:run -d src/config/migration.config.ts",
-    "migrate:prod:revert": "npm run pre:prod && typeorm migration:revert -d src/config/migration.config.ts",
-    "migrate:prod:show": "npm run pre:prod && typeorm migration:show -d src/config/migration.config.ts",
+    "migrate:generate": "npm run pre:local && npm run typeorm -- migration:generate migrations/init -d src/config/migration.config.ts",
+    "migrate:create": "npm run pre:local && npm run typeorm -- migration:create migrations/%npm_config_name%",
+    "query:local": "npm run pre:local && npm run typeorm -- query -d src/config/migration.config.ts",
+    "migrate:local:run": "npm run pre:local && npm run typeorm -- migration:run -d src/config/migration.config.ts",
+    "migrate:local:revert": "npm run pre:local && npm run typeorm -- migration:revert -d src/config/migration.config.ts",
+    "migrate:local:show": "npm run pre:local && npm run typeorm -- migration:show -d src/config/migration.config.ts",
+    "query:dev": "npm run pre:dev && npm run typeorm -- query -d src/config/migration.config.ts",
+    "migrate:dev:run": "npm run pre:dev && npm run typeorm -- migration:run -d src/config/migration.config.ts",
+    "migrate:dev:revert": "npm run pre:dev && npm run typeorm -- migration:revert -d src/config/migration.config.ts",
+    "migrate:dev:show": "npm run pre:dev && npm run typeorm -- migration:show -d src/config/migration.config.ts",
+    "query:prod": "npm run pre:prod && npm run typeorm -- query -d src/config/migration.config.ts",
+    "migrate:prod:run": "npm run pre:prod && npm run typeorm -- migration:run -d src/config/migration.config.ts",
+    "migrate:prod:revert": "npm run pre:prod && npm run typeorm -- migration:revert -d src/config/migration.config.ts",
+    "migrate:prod:show": "npm run pre:prod && npm run typeorm -- migration:show -d src/config/migration.config.ts",
     "format:write": "prettier --write \"**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"**/*.{ts, tsx}\" --cache"
   },
